force-app/main/default/objects/Lead/fields/WXIntegration__Wealth_X_Detail_Dossier__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Detail_Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will auto populate based on Wealth-X Data integration.</inlineHelpText>
    <label>Wealth-X Detail Dossier</label>
    <referenceTo>WXIntegration__WealthXDetailDossier__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads_del</relationshipName>
    <type>Lookup</type>
</CustomField>