force-app/main/default/objects/Lead/fields/WXIntegration__Wealth_X_Dossier_Request__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Dossier_Request__c</fullName>
    <formula>if((WXIntegration__Wealth_X_Dossier_Id__c &gt; 0),HYPERLINK(&apos;/apex/WXIntegration__WealthXRequestUpdate?dossierId=&apos;+TEXT(WXIntegration__Wealth_X_Dossier_Id__c)+&apos;&amp;dossierName=&apos;+WXIntegration__Wealth_X_Detail_Dossier__r.WXIntegration__firstName__c+&apos; &apos;+WXIntegration__Wealth_X_Detail_Dossier__r.WXIntegration__lastName__c+&apos;&amp;requestType=old&amp;associatedId=&apos;+Id + &apos;&amp;associatedObject=Lead&amp;hasAccessToAtleastOneRec=Yes&apos;,&quot;Refresh/Build Dossier&quot;), HYPERLINK(&apos;/apex/WXIntegration__WealthXCreateRequest?requestType=new&amp;associatedId=&apos;+CASESAFEID(Id)+&apos;&amp;associatedObject=Lead&amp;dossierName=&apos;+FirstName+&apos; &apos;+LastName+&apos;&amp;company=&apos;+Company+&apos;&amp;location=&apos;+City+&apos;, &apos;+State+&apos;, &apos;+Country+&apos;&amp;hasAccessToAtleastOneRec=Yes&apos;, &quot;Request a New Dossier&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will autopopulate based on Wealth-X Data integration.</inlineHelpText>
    <label>Wealth-X Dossier Request</label>
    <type>Text</type>
</CustomField>