force-app/main/default/objects/Lead/fields/WXIntegration__Wealth_X_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Entity_Id__c</fullName>
    <description>DEPRECATED FOR THIS VERSION</description>
    <inlineHelpText>This field will autopopulate based on Wealth-X Data integration.</inlineHelpText>
    <label>Wealth-X Entity Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>