force-app/main/default/objects/Lead/fields/WXIntegration__Wealth_X_Is_Primary_Dossier__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Is_Primary_Dossier__c</fullName>
    <description>DEPRECATED FOR THIS VERSION</description>
    <inlineHelpText>This field will autopopulate based on Wealth-X Data integration.</inlineHelpText>
    <label>Wealth-X Is Primary Dossier</label>
    <length>15</length>
    <type>Text</type>
</CustomField>