force-app/main/default/objects/Lead/fields/WXIntegration__Wealth_X_Is_Updated_For_Match__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Is_Updated_For_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on fields which have been defined in match settings for Leads it will be decided whether record was modified or not. Wealth_X_LeadTrigger mark this field true in before update trigger and when the update process completes, it will be marked false by Wealth_X_ResetIsUpdatedForMatchFlagBatch.</description>
    <inlineHelpText>This field will autopopulate based on Wealth-X Data integration</inlineHelpText>
    <label>Wealth-X Is Updated For Match</label>
    <type>Checkbox</type>
</CustomField>