force-app/main/default/objects/Lead/fields/YearsofExperience__c.field-meta.xml
<CustomField>
    <fullName>YearsofExperience__c</fullName>
    <inlineHelpText>How many years of Work experience does the Lead have. This includes total number of working years</inlineHelpText>
    <label>Years of Experience</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>