force-app/main/default/objects/Lead/validationRules/If_AccountType_is_selected_as_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>If_AccountType_is_selected_as_Company</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  AccountType__c , &quot;Company&quot;),
OR(
ISBLANK(Company)
)
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Company field is mandatory when Account Type is selected as Company</errorMessage>
</ValidationRule>