force-app/main/default/objects/Lead/validationRules/Lead_Source_is_Convention_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_Convention_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Lead_Source__c, &quot;Convention&quot;),
    OR(
        ISBLANK(ConventionName__c)
    )
)</errorConditionFormula>
    <errorDisplayField>ConventionName__c</errorDisplayField>
    <errorMessage>Convention Name is mandatory when lead source is selected as &quot;Convention&quot;</errorMessage>
</ValidationRule>