force-app/main/default/objects/Lead/validationRules/Lead_Source_is_Convention_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_Convention_Year</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Lead_Source__c, &quot;Convention&quot;),
OR(
ISBLANK( ConventionYear__c)
)
)</errorConditionFormula>
    <errorDisplayField>ConventionYear__c</errorDisplayField>
    <errorMessage>Convention Year is mandatory when lead source is selected as &quot;Convention&quot;</errorMessage>
</ValidationRule>