force-app/main/default/objects/Lead/validationRules/Lead_Source_is_InPersonMeeting_Describe.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_InPersonMeeting_Describe</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Lead_Source__c, &quot;InPersonMeeting&quot;),
OR(
ISBLANK(  Description__c )
)
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description field is mandatory when &quot;In Person Meeting&quot; Lead source is selected.</errorMessage>
</ValidationRule>