force-app/main/default/objects/Lead/validationRules/Lead_Source_is_InPersonMeeting_When.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_InPersonMeeting_When</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Lead_Source__c, &quot;InPersonMeeting&quot;),
OR(
ISBLANK(  When__c )
)
)</errorConditionFormula>
    <errorDisplayField>When__c</errorDisplayField>
    <errorMessage>When field is mandatory when &quot;In Person Meeting&quot; Lead source is selected.</errorMessage>
</ValidationRule>