force-app/main/default/objects/Lead/validationRules/Lead_Source_is_InPersonMeeting_Where.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_InPersonMeeting_Where</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Lead_Source__c, &quot;InPersonMeeting&quot;),
OR(
ISBLANK( Where__c )
)
)</errorConditionFormula>
    <errorDisplayField>Where__c</errorDisplayField>
    <errorMessage>Where field is mandatory when &quot;In Person Meeting&quot;  Lead source is selected.</errorMessage>
</ValidationRule>