force-app/main/default/objects/Lead/validationRules/Lead_Source_is_Research.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_Research</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Lead_Source__c, &quot;Research&quot;),
    OR(
        ISBLANK( DescribeResearch__c )
    )
)</errorConditionFormula>
    <errorDisplayField>DescribeResearch__c</errorDisplayField>
    <errorMessage>Describe Research is mandatory when Lead Source is selected as Research.</errorMessage>
</ValidationRule>