force-app/main/default/objects/Lead/validationRules/Lead_Source_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_URL</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK(LeadSourceURL__c),((ISPICKVAL(Lead_Source__c,&quot;NewsPublication&quot;) &amp;&amp; ISBLANK(LeadSourceURL__c)) || (ISPICKVAL(Lead_Source__c,&quot;LinkedInRecruiter&quot;) &amp;&amp; ISBLANK(LeadSourceURL__c)) || (ISPICKVAL(Lead_Source__c,&quot;LinkedIntheSocialMedium&quot;)  &amp;&amp; ISBLANK(LeadSourceURL__c)) || (ISPICKVAL(Lead_Source__c,&quot;ZoomInfo&quot;) &amp;&amp; ISBLANK(LeadSourceURL__c)) || (ISPICKVAL(Lead_Source__c,&quot;Convention&quot;))))</errorConditionFormula>
    <errorDisplayField>LeadSourceURL__c</errorDisplayField>
    <errorMessage>Lead Source URL is mandatory when News Publication, LinkedIn Recruiter, LinkedIn the Social Medium, Zoom Info, Convention Lead sources are selected.</errorMessage>
</ValidationRule>